--- a/07 - 1era Entrega Proyecto Final/MVT_DALINGER/MVT_DALINGER_App/templates/MVT_DALINGER_App/curso.html
+++ b/07 - 1era Entrega Proyecto Final/MVT_DALINGER/MVT_DALINGER_App/templates/MVT_DALINGER_App/curso.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso</title>
-</head>
-<body>
-    <h1>CURSO</h1>
-</body>
-</html>
+{% extends "MVT_DALINGER_App/padre.html" %}
+
+{% load static %}
+
+{% block titulo_de_pagina %}
+
+    <h1 class="mb-5">ESTE TITULO VIENE DE CURSO</h1>
+    
+{% endblock %}
+
+{% block contenido_que_cambia %}
+
+    <h1>ESTE ES EL CONTENIDO QUE CAMBIO EN PAG CURSO</h1>
+
+{% endblock %}
